--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
              View recipes as guest user
          </h3>
          <h2 class="left">
-             Browse and viw recipe as a guest and Sign Up later
+             Browse and view recipe as a guest and Sign Up later
          </h2>
          <p> <%= link_to "Browse recipe listings", "", class: "btn btn-small btn-warning" %></p>
      </div>
@@ -19,7 +19,7 @@
              View recipes as guest user
          </h3>
          <h2 class="left">
-             Browse and viw recipe as a guest and Sign Up later
+             Browse and view recipe as a guest and Sign Up later
          </h2>
          <p> <%= link_to "Browse recipe listings", "", class: "btn btn-small btn-warning" %></p>
      </div>
@@ -29,7 +29,7 @@
              View recipes as guest user
          </h3>
          <h2 class="left">
-             Browse and viw recipe as a guest and Sign Up later
+             Browse and view recipe as a guest and Sign Up later
          </h2>
          <p> <%= link_to "Browse recipe listings", "", class: "btn btn-small btn-warning" %></p>
      </div>
