--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
-    <%= link_to "myRecipes", "", class: "btn btn-large btn-success", id: "logo" %>
+    <%= link_to "myRecipes", root_path, class: "btn btn-large btn-success", id: "logo" %>
     
     <div class="nav_item">
     <%= link_to "Link1", "", class: "btn btn-default btn-warning" %>
@@ -11,7 +11,7 @@
     </div>
     
     <div class="nav_item">
-    <%= link_to "Link2", "", class: "btn btn-default btn-warning" %>
+    <%= link_to "New Recipe", new_recipe_path, class: "btn btn-default btn-warning" %>
     </div>
     
 
