--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
          <h2 class="left">
              Browse and view recipe as a guest and Sign Up later
          </h2>
-         <p> <%= link_to "Browse recipe listings", "", class: "btn btn-small btn-warning" %></p>
+         <p> <%= link_to "Browse recipe listings", recipes_path, class: "btn btn-small btn-warning" %></p>
      </div>
      
     <div class="col-lg-4">
