--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,15 +3,40 @@
 
 body{
     
-    padding-top: 80px;
+    padding-top: 50px;
 }
 
 .nav_item{
     margin-left: 10px;
     float: left;
-     margin-top: 10px;
+    margin-top: 10px;
+    margin-right: 10px;
  
 }
+
+.center{
+    text-align: center;
+}
+
+h1,h2,h3,h4{
+    line-height: 1;
+}
+
+h1{
+    font-size: 3em;
+    letter-spacing: -2px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+h2{
+    font-size: 1.2em;
+    font-weight: normal;
+    margin-bottom: 30px !important;
+    text-align: center;
+    color: #777;
+}
+
 
 #logo{
     float: left;
