--- a/app/views/chefs/show.html.erb
+++ b/app/views/chefs/show.html.erb
@@ -1,14 +1,22 @@
-<%= render 'shared/page_title',title: "All Recipes" %>
-<%= will_paginate %>
-<% @recipes.each do |recipe| %>
+<%= render 'shared/page_title',title: "Chef " + @chef.chefname %>
+<div class="row">
+    <div class="col-md-4 col-md-offset-4 center">
+        <%= gravatar_for @chef, size:200 %>
+      
+       </div>
+    </div><hr/>
+    
     <div class="row">
-        <div class="col-md-2">
-            <section class="chef-info center">
-                <%= link_to gravatar_for(recipe.chef, size: 100), chef_path(recipe.chef)  %>
-                <h5>Chef Name: <%= recipe.chef.chefname %></h5>
-            </section>
+        <div class="col-md-4 col-md-offset-5 center">
+            <h3><em>Recipes:</em></h3>
+            <%= will_paginate @recipes %>
         </div>
-        <div class="col-md-6 well">
+        
+    </div>
+ 
+ <% @recipes.each do |recipe| %>   
+    <div class="row">
+    <div class="col-md-6 well col-md-offset-3">
           <h4><%= link_to recipe.name, recipe_path(recipe) %></h4> 
           <p><%= recipe.summary %></p>
           <p>
@@ -24,12 +32,6 @@
                 <i class="glyphicon glyphicon-thumbs-down"></i> &nbsp <%= recipe.thumbs_down_total %>
                 <% end %>
         </div>
-        
-       
-        </div>
-         <div class="col-md-4">
-           <%= image_tag(recipe.picture.url, size: "250x150", class: "gravatar") if recipe.picture? %>
-        </div>
+      </div>
     </div>
-<% end %>
-<%= will_paginate %>
+ <% end %>
