--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
-    <%= link_to "myRecipes", root_path, class: "btn btn-large btn-success", id: "logo" %>
+    <%= link_to "MYRECIPES", root_path, class: "btn btn-lg btn-success", id: "logo" %>
     
     <div class="nav_item">
     <%= link_to "Link1", "", class: "btn btn-default btn-warning" %>
@@ -10,10 +10,29 @@
     <%= link_to "Link2", "", class: "btn btn-default btn-warning" %>
     </div>
     
+    <% if logged_in? %>
     <div class="nav_item">
     <%= link_to "New Recipe", new_recipe_path, class: "btn btn-default btn-warning" %>
     </div>
-    
+    <ul class="nav_item">
+      <li class="dropdown">
+        <%= link_to '#', class: "btn btn-default btn-danger dropdown-toggle", "data-toggle" => "dropdown" do %>
+        <%= current_user.chefname %><b class="caret"></b>
+        <% end %>
+        <ul class="dropdown-menu">
+          <li><%= link_to "View Profile", chef_path(current_user) %></li>
+          <li><%= link_to "Edit Profile", edit_chef_path(current_user) %></li>
+          <li class="divider"></li>
+          <li><%= link_to "Logout", logout_path %></li>
+        </ul>
+      </li>
+    </ul>
+   
+    <% else %>
+    <div class="nav_item">
+    <%= link_to "Log in", login_path, class: "btn btn-default btn-success" %>
+    </div>
+    <% end %>
 
 
   </div>
