--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<div class="jumbotron">
+<div class="center jumbotron">
   <h1>Welcome to MyRecipes app</h1>
-  <%= link_to "Sign up now!", "", class: "btn btn-large btn-success" %>
+  <%= link_to "Sign up now!", register_path, class: "btn btn-lg btn-success" %>
  </div>
  
  <div class="row">
@@ -16,12 +16,12 @@
      
     <div class="col-lg-4">
          <h3 class="midrow">
-             View recipes as guest user
+             Sign in to your account
          </h3>
          <h2 class="left">
-             Browse and view recipe as a guest and Sign Up later
+             Add/Update your recipes/create reviews/like-dislike recipes and much more!
          </h2>
-         <p> <%= link_to "Browse recipe listings", "", class: "btn btn-small btn-warning" %></p>
+         <p> <%= link_to "Login to your account", login_path, class: "btn btn-small btn-warning" %></p>
      </div>
      
      <div class="col-lg-4">
